@@ -21,8 +21,9 @@ else:
 import os.path
 from numexpr.expressions import E
 from numexpr.necompiler import NumExpr, disassemble, evaluate
-from numexpr.tests import test
-from numexpr.utils import set_vml_accuracy_mode, set_vml_num_threads
+from numexpr.tests import test, print_versions
+from numexpr.utils import (
+    get_vml_version, set_vml_accuracy_mode, set_vml_num_threads)
 
 
 import version
