@@ -1,4 +1,4 @@
-from numexpr.tests.test_numexpr import test
+from numexpr.tests.test_numexpr import test, print_versions
 
 if __name__ == '__main__':
     test()
